--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://d2ini9d8zl5v3s.cloudfront.net/az360-mini/distribution/assets/app/AZ360.ipa</string>
+                    <string>https://github.com/mahendra022/news_app/raw/master/AZ360.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
